[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
ash = { version = "0.38.0", features = ["linked"] }
glfw = { version = "0.58.0", features = ["vulkan"] }
log = "0.4.22"
pretty_env_logger = "0.5.0"
windows = { version = "0.58.0", features = ["Win32_System_SystemServices"] }
